# claude-ast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md  results.md
eval/calibration/: README.md  __init__.py  edges.py  gate.py  report.py  run.py  trace.py  verdicts.py
eval/calibration/python/: __init__.py  cli.py  driver.py  ids.py  runtime.py  static.py
eval/tickets/20024/: rubric.md  task.md
eval/tickets/37016/: rubric.md  task.md
eval/tickets/37057/: rubric.md  task.md
src/claude_ast/: __init__.py  cli.py  config.py  index.py  log.py
src/claude_ast/ingest/: __init__.py  base.py  product.py  project.py  python.py
src/claude_ast/ingest/python/: __init__.py  _stub_table.py  _typeshed_table.py  backend.py  binding.py  callsite.py  chains.py  common.py  finalize.py  flow.py  refs.py  resolve_index.py  resolver.py  scope.py  stubs.py  symbols.py  typeres.py
src/claude_ast/model/: __init__.py  core.py  graph.py
src/claude_ast/query/: __init__.py  lookup.py  metrics.py  rank.py  relations.py  repomap.py
src/claude_ast/resolve/: __init__.py
src/claude_ast/server/: __init__.py  __main__.py  app.py
src/claude_ast/store/: __init__.py  base.py  serialize.py  sqlite.py
src/claude_ast/watch/: __init__.py  watcher.py
tests/: README.md  test_cli.py  test_ingest_project.py  test_logging.py  test_metrics.py  test_model.py  test_query.py  test_rank.py  test_relations.py  test_repomap.py  test_server.py  test_session.py  test_store.py
tests/backends/: test_python.py
tests/backends/python/: test_callsite.py  test_chains.py  test_decorators.py  test_edges.py  test_finalize.py  test_imports.py  test_incremental.py  test_integration.py  test_module_tree.py  test_reads.py  test_resolvers.py  test_stubs.py  test_symbols.py  test_typeshed_table.py  test_value_chains.py
tests/eval/: .gitkeep  test_golden.py  test_reconcile.py  test_trace.py
tests/fixtures/: .gitkeep
tests/fixtures/sample_pkg/: __init__.py  compat.py  core.py  externals.py  reads.py  service.py
tests/fixtures/sample_pkg/sub/: __init__.py  helpers.py
tools/: README.md
tools/python/: gen_stubs.py  gen_typeshed.py
