[project]
name = "claude-ast"
version = "0.0.0"
description = "AST-backed code navigation for Claude Code — precise, structural, confidence-graded."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Joseph", email = "joseph@josefyu.com" }]
dependencies = [
    "mcp>=1.2",
    "watchfiles>=0.24",
]

[project.scripts]
claude-ast = "claude_ast.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_ast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
