[project]
name = "claude-ast"
version = "0.0.0"
description = "AST-backed code navigation for Claude Code — precise, structural, confidence-graded."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Joseph", email = "joseph@josefyu.com" }]
dependencies = [
    "mcp>=1.2",
    "watchfiles>=0.24",
]

[project.scripts]
claude-ast = "claude_ast.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_ast"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Golden-index fixtures are parsed as data, not imported — they intentionally
# contain unresolved imports and version-gated redefinitions.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Generated frozen stub table (tools/gen_stubs.py): dense one-line frozenset literals.
"src/claude_ast/ingest/python/_stub_table.py" = ["E501"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["tests/fixtures"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
